Actions
Bug #13403
closedzfs: symbol 'g_zfs' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with gcc 10:
ld: fatal: symbol 'g_zfs' is multiply-defined: (file zfs_main.o type=OBJT; file zfs_iter.o type=OBJT); ld: fatal: symbol 'g_zfs' is multiply-defined: (file zfs_main.o type=OBJT; file zfs_project.o type=OBJT); ld: fatal: file processing errors. No output written to zfs collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `zfs' Current working directory /code/illumos-gate/usr/src/cmd/zfs
gcc 10 did change default -fcommon to -fno-common
Related issues
Updated by Toomas Soome over 1 year ago
- Related to Bug #13402: zpool: symbol 'g_zfs' is multiply-defined added
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8247326397b1a16f37e70cf13f5b7a4f50d06712
commit 8247326397b1a16f37e70cf13f5b7a4f50d06712 Author: Toomas Soome <tsoome@me.com> Date: 2020-12-31T07:23:46.000Z 13403 zfs: symbol 'g_zfs' is multiply-defined Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions