13403 zfs: symbol 'g_zfs' is multiply-defined Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Richard Lowe <richlowe@richlowe.net>